mini-book-record-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mini-book-record-mysql
spec:
  selector:
    app: mini-book-record-mysql
  ports:
    - protocol: TCP
      port: 3308
      targetPort: 3306
  type: LoadBalancer
